selenium-firefox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: selenium-firefox
  name: selenium-firefox
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: selenium-firefox
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: selenium-firefox
    spec:
      containers:
        - image: b4handjr/selenium-firefox
          name: selenium-firefox
          ports:
            - containerPort: 5900
          resources: {}
          volumeMounts:
            - mountPath: /code
              name: selenium-firefox-claim0
      restartPolicy: Always
      volumes:
        - name: selenium-firefox-claim0
          persistentVolumeClaim:
            claimName: selenium-firefox-claim0
status: {}
