selenium-firefox-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: selenium-firefox
  name: selenium-firefox
spec:
  ports:
    - name: "5900"
      port: 5900
      targetPort: 5900
  selector:
    io.kompose.service: selenium-firefox
status:
  loadBalancer: {}
