web-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ffsend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
  namespace: ffsend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
        - image: 904443321315.dkr.ecr.us-east-1.amazonaws.com/testspace/ffsend
          name: web
          ports:
            - containerPort: 1443
          resources: {}
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
  namespace: ffsend
spec:
  ports:
    - name: "1443"
      port: 80
      targetPort: 1443
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ffsend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /services
  namespace: ffsend
spec:
  rules:
  - host: "ffsend.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: web
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
  namespace: ffsend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - image: redis:alpine
          name: redis
          resources: {}
      restartPolicy: Always
status: {}
